--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.2",
+    "autoprefixer": "^10.4.20",
+    "axios": "^1.7.7",
     "pinia": "^2.2.6",
+    "postcss": "^8.4.49",
+    "primevue": "^4.2.2",
+    "tailwindcss": "^3.4.15",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
