--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@primevue/themes": "^4.2.2",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "gsap": "^3.12.5",
     "pinia": "^2.2.6",
     "pinia-plugin-persistedstate": "^4.1.3",
     "postcss": "^8.4.49",
